app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: SRE
  namespace: default
spec:
  selector:
    matchLabels:
      run: SRE
  template:
    metadata:
      labels:
        run: SRE
    spec:
      containers:
      - image: nginx:latest
        name: SRE
        ports:
        - containerPort: 80
          protocol: TCP
