app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: SRE
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: SRE
  type: NodePort
