app/ingress.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: ingress
spec:
  backend:
    serviceName: SRE
    servicePort: 80
